@@ -1,13 +1,14 @@
-// Copyright (C) 2003-2005 Anders Logg.
+// Copyright (C) 2003-2008 Anders Logg.
 // Licensed under the GNU LGPL Version 2.1.
 //
 // First added:  2003-10-21
-// Last changed: 2006-05-23
+// Last changed: 2008-05-20
 
 #ifndef __NEW_XML_MESH_H
 #define __NEW_XML_MESH_H
 
 #include <dolfin/mesh/MeshEditor.h>
+#include <dolfin/mesh/MeshFunction.h>
 #include "XMLObject.h"
 
 namespace dolfin
@@ -30,7 +31,10 @@ namespace dolfin
     
   private:
     
-    enum ParserState { OUTSIDE, INSIDE_MESH, INSIDE_VERTICES, INSIDE_CELLS, DONE };
+    enum ParserState {OUTSIDE,
+                      INSIDE_MESH, INSIDE_VERTICES, INSIDE_CELLS,
+                      INSIDE_DATA, INSIDE_MESH_FUNCTION,
+                      DONE};
     
     void readMesh        (const xmlChar* name, const xmlChar** attrs);
     void readVertices    (const xmlChar* name, const xmlChar** attrs);
@@ -39,12 +43,15 @@ namespace dolfin
     void readInterval    (const xmlChar* name, const xmlChar** attrs);
     void readTriangle    (const xmlChar* name, const xmlChar** attrs);
     void readTetrahedron (const xmlChar* name, const xmlChar** attrs);
+    void readMeshFunction(const xmlChar* name, const xmlChar** attrs);
+    void readEntity      (const xmlChar* name, const xmlChar** attrs);
     
     void closeMesh();
 
     Mesh& _mesh;
     ParserState state;
     MeshEditor editor;
+    MeshFunction<uint>* f;
     
   };
   
