@@ -1,3 +1,4 @@
+ - Add support for attaching arbitrarily named data to meshes
  - Add support for dynamically choosing the linear algebra backend
  - Add Epetra/Trilinos linear solvers
  - Add setrow() to matrix interface
